# think-drop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/instructions/IDE Agent/: chat-titles.md  claude-sonnet-4.md  gemini-2.5-pro.md  gpt-4.1.md  gpt-4o.md  gpt-5-mini.md  gpt-5.md  nes-tab-completion.md  prompt.md
tests/: conftest.py  test_bot.py  test_config.py  test_llm.py  test_notion.py
think_drop/: bot.py  config.py  context.py  llm.py  main.py  notion.py
think_drop/llms/: base_llm.py  claude_llm.py  const.py  gemini_llm.py  openai_lm.py
